# sqlthemall

./: .gitignore  .pylintrc  Makefile  README.md  dbtest_compose.yml  dburls.txt  project.yml  pyproject.toml  r.txt  requirements-dev.txt  requirements.txt  setup.py  sqlthemall  tox.ini  update_requirements.sh
data/: example.json
data/testvalidate/: array_bool.schema  array_bool.simple_schema  array_float.schema  array_float.simple_schema  array_integer.schema  array_integer.simple_schema  array_null.simple_schema  array_object_bool.schema  array_object_bool.simple_schema  array_object_float.schema  array_object_float.simple_schema  array_object_int.schema  array_object_int.simple_schema  array_object_null.schema  array_object_null.simple_schema  array_object_string.schema  array_object_string.simple_schema  array_string.schema  array_string.simple_schema  object_array_bool.schema  object_array_bool.simple_schema  object_array_float.schema  object_array_float.simple_schema  object_array_integer.schema  object_array_integer.simple_schema  object_array_null.schema  object_array_null.simple_schema  object_array_string.schema  object_array_string.simple_schema  object_bool.schema  object_bool.simple_schema  object_float.schema  object_float.simple_schema  object_integer.schema  object_integer.simple_schema  object_mixed.schema  object_mixed.simple_schema  object_null.schema  object_null.simple_schema  object_object_mixed.schema  (+3 more)
data/testvalidate/dot/: nosimple_array_float.dot  nosimple_array_object_float.dot  nosimple_array_object_string.dot  nosimple_array_string.dot  nosimple_object_array_bool.dot  nosimple_object_array_float.dot  nosimple_object_array_integer.dot  nosimple_object_array_string.dot  nosimple_object_bool.dot  nosimple_object_float.dot  nosimple_object_mixed.dot  nosimple_object_object_mixed.dot  simple_array_bool.dot  simple_array_integer.dot  simple_array_object_int.dot  simple_object_array_bool.dot  simple_object_array_float.dot  simple_object_array_integer.dot  simple_object_array_string.dot  simple_object_integer.dot  simple_object_null.dot  simple_object_string.dot
data/testvalidate/json/: nosimple_array_float.json  nosimple_array_object_bool.json  nosimple_array_object_int.json  nosimple_array_object_string.json  nosimple_object_array_bool.json  nosimple_object_array_float.json  nosimple_object_array_integer.json  nosimple_object_array_string.json  nosimple_object_integer.json  nosimple_object_string.json  simple_array_bool.json  simple_array_integer.json  simple_array_null.json  simple_array_object_float.json  simple_array_string.json  simple_object_array_bool.json  simple_object_array_float.json  simple_object_array_integer.json  simple_object_array_string.json  simple_object_float.json  simple_object_mixed.json  simple_object_object_mixed.json
data/testvalidate/sql/: nosimple_array_float.sql  nosimple_array_integer.sql  nosimple_array_object_bool.sql  nosimple_array_object_int.sql  nosimple_array_object_string.sql  nosimple_object_array_bool.sql  nosimple_object_array_float.sql  nosimple_object_array_integer.sql  nosimple_object_array_string.sql  nosimple_object_bool.sql  nosimple_object_integer.sql  nosimple_object_mixed.sql  nosimple_object_object_mixed.sql  nosimple_object_string.sql  simple_array_bool.sql  simple_array_float.sql  simple_array_null.sql  simple_array_object_float.sql  simple_array_object_int.sql  simple_array_object_null.sql  simple_array_object_string.sql  simple_array_string.sql  simple_object_array_bool.sql  simple_object_array_float.sql  simple_object_array_integer.sql  simple_object_array_string.sql  simple_object_float.sql  simple_object_object_mixed.sql
docs/: conf.py  index.rst  readme.rst
docs/source/: modules.rst  sqlthemall.rst
lib/: json_importer.py  sqlthemall.py
requirements/: requirements-linting.txt  requirements-testing.txt  requirements-typing.txt  requirements.txt
sqlthemall/: json_importer.py  main.py  sadisplay.dot.j2
tests/: dburls.txt  sqlthemall  test_default_args.py  test_importer_options.py  test_json_importer.py  utils.py  utils.py.bak
utils/: _sqlthemall
