[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
[tool.setuptools.package-dir]
sqlthemall = "sqlthemall"

[project]
name = "sqlthemall"
version = "0.0.0"
description = "Automatic import of JSON data into relational databases."
authors = [
  {name = "Christopher Kipp", email = "christopher.kipp@web.de"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
keywords = [
  "json",
  "SQLAlchemy",
  "orm"
]
classifiers = [
  "Topic :: Database",
  "Topic :: Utilities",
  "Environment :: Console",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

requires-python = ">=3.10"
dependencies = [
  "alembic>=1.15.2",
  "SQLAlchemy>=2.0.40",
  "ujson>=5.10.0"
]

[project.optional-dependencies]
dev = [
  "autoflake>=2.1.1",
  "black>=22.10.0",
  "flake8>=6.0.0",
  "flake8-awesome>=1.3.0",
  "isort>=5.10.1",
  "mypy>=0.982",
  "pyfmt-svtter>=0.1.0",
  "pylint>=2.15.5",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "bandit>=1.7.5",
  "pydocstringformatter>=0.7.3"
]

[project.scripts]
sqlthemall = "sqlthemall.main:main"
