[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
sqlthemall = "sqlthemall"

[tool.setuptools.package-data]
"*" = [
  "*.j2"
]

[project]
name = "sqlthemall"
version = "0.0.0"
description = "Automatic import of JSON data into relational databases."
authors = [
  {name = "Christopher Kipp", email = "christopher.kipp@web.de"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
keywords = [
  "json",
  "SQLAlchemy",
  "orm"
]
classifiers = [
  "Topic :: Database",
  "Topic :: Utilities",
  "Environment :: Console",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.15.2",
  "SQLAlchemy>=2.0.40",
  "ujson>=5.10.0",
  "jinja2>=3.1.6"
]

[project.optional-dependencies]
linting = [
  "autoflake>=2.3.1",
  "black>=25.1.0",
  "flake8>=7.2.0",
  "flake8-awesome>=1.3.0",
  "isort>=6.0.1",
  "pyfmt-svtter>=0.1.0",
  "pylint>=3.3.7",
  "bandit>=1.8.3",
  "pydocstringformatter>=0.7.3"
]
testing = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "tox>=4.25.0"
]
typing = [
  "mypy-extensions>=1.1.0",
  "mypy>=1.15.0",
  "types-pyyaml>=6.0.12.20250402",
  "types-ujson>=5.10.0.20250326",
  "typing-extensions>=4.13.2"
]

[project.scripts]
sqlthemall = "sqlthemall.main:main"


